backend - search for restaurants
